@@ -2,6 +2,7 @@ package com.pholser.dulynoted;
 
 import java.lang.annotation.Annotation;
 import java.lang.reflect.AnnotatedElement;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -9,7 +10,10 @@ import java.util.Optional;
  * An object that can find annotations that are "directly present" on a
  * program element.
  */
-final class Direct implements SingleByType, All {
+public final class Direct implements SingleByType, All {
+  Direct() {
+  }
+
   @Override public <A extends Annotation> Optional<A> find(
     Class<A> annoType,
     AnnotatedElement target) {
@@ -18,6 +22,6 @@ final class Direct implements SingleByType, All {
   }
 
   @Override public List<Annotation> all(AnnotatedElement target) {
-    return List.of(target.getDeclaredAnnotations());
+    return Arrays.asList(target.getDeclaredAnnotations());
   }
 }
